--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,26 +3,20 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/sensor?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql://localhost:3306/sensor?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
-          # 是否自动提交
           auto-commit: true
-          # 如果在没有连接可用的情况下超过此时间，则将抛出SQLException
           connection-timeout: 30000
-          # 控制允许连接在池中空闲的最长时间
           idle-timeout: 600000
-          # 控制池中连接的最长生命周期。使用中的连接永远不会退役，只有当它关闭时才会被删除
           max-lifetime: 1800000
-          # 如果您的驱动程序支持JDBC4，强烈建议不要设置此属性
-          # connection-test-query:
-          # 控制HikariCP尝试在池中维护的最小空闲连接数。建议不要设置此值，而是允许HikariCP充当固定大小的连接池。 默认值：与maximumPoolSize相同
-          # minimum-idle:
-          # 此属性控制允许池到达的最大大小，包括空闲和正在使用的连接。
           maximum-pool-size: 100
-
+# 鎵撳嵃sql
+logging:
+  level:
+    com.sensor.mapper : debug
 
 
